[package]
name = "vpn_parser"
version = "1.0.0"
edition = "2021"
authors = ["VPN Parser"]
description = "High-performance VLESS+XHTTP+Reality+CIDR(RU SNI) parser"

[dependencies]
tokio = { version = "1.40", features = ["full"] }
reqwest = { version = "0.12", features = ["rustls-tls", "gzip", "brotli", "deflate", "stream"] }
url = "2.5"
base64 = "0.22"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
percent-encoding = "2.3"
ipnetwork = "0.20"
trust-dns-resolver = "0.23"
tokio-socks = "0.5"
rand = "0.8"
chrono = "0.4"
anyhow = "1.0"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt", "ansi"] }
dashmap = "6.0"
futures = "0.3"
bytes = "1.7"
sha2 = "0.10"
hex = "0.4"
parking_lot = "0.12"
indexmap = "2.4"

[profile.release]
opt-level = 3
lto = "fat"
codegen-units = 1
panic = "abort"
strip = true
target-cpu = "native"
